set attendees icon, fix overlap header in popup detail and add attendees helper

--- a/src/css/popup.styl
+++ b/src/css/popup.styl
@@ -13,9 +13,8 @@
     border-radius: 2px
 
 .{css-prefix}popup-section
-    padding-bottom: 8px
     font-size: 0
-    height: 40px
+    height: auto
 
 .{css-prefix}section-calendar
     width: 176px
@@ -402,7 +401,8 @@ input[type='checkbox'].{css-prefix}checkbox-round + span
   line-height: 2
 
 .{css-prefix}popup-detail .{css-prefix}section-header
-  margin-bottom: 12px
+  margin-bottom: 8px
+  border-bottom 1px solid #e5e5e5
 
 .{css-prefix}popup-detail .{css-prefix}schedule-title
   font-size: 15px
@@ -419,7 +419,7 @@ input[type='checkbox'].{css-prefix}checkbox-round + span
   display: block
 
 .{css-prefix}popup-detail .{css-prefix}section-detail
-  margin-bottom: 16px
+  margin-bottom: 8px
 
 .{css-prefix}popup-detail .{css-prefix}section-button
   border-top: 1px solid #e5e5e5
